# sans_schema

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  todo.md
core/: predicate.py  prompts.py  resolver.py  schemas.py
docs/: HANDOFF.md  architecture.md  devlog.md  kickoff.md  system-design.md
docs/_templates/: adr.md  topic-doc.md
docs/demo/: script.md
docs/notes/: query-api-open-questions.md
docs/plans/: 2026-07-first-gateway-slice.md  README.md
docs/specs/: 2026-07-concept-and-spike.md  2026-07-first-gateway-slice.md  README.md
gateway/: DEPLOY.md  README.md  app.py  cache.py  config.py  contracts.py  gate.py  guardrails.py  pipeline.py
gateway/connectors/: base.py  fake.py  postgres.py
gateway/demo/: authors.json  books.json  build_dataset.py  columns.py  rows.py  seed.sql
playground/: README.md  package-lock.json  package.json
playground/app/: globals.css  layout.tsx  page.tsx
playground/components/: InterpretedPanel.tsx  RequestBuilder.tsx  RequestPanel.tsx  ResultsTable.tsx  StatusPanel.tsx
playground/lib/: api.ts  examples.ts
playground/public/: slides.html
spike/: README.md  cases.py  llm.py  prompts.py  resolver.py  schemas.py  score.py
tests/: fakes.py  test_packaging.py
tests/core/: test_predicate.py  test_typecheck.py  test_validate_ast.py  test_where_confidence.py
tests/gateway/: conftest.py  test_app.py  test_cache.py  test_config.py  test_contracts.py  test_demo_build.py  test_demo_dataset.py  test_fake_connector.py  test_gate.py  test_guardrails.py  test_pipeline.py  (+3 more)
(+8 files in other folders)
