[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sans-schema"
version = "0.1.0"
description = "Semantic Query Gateway — first gateway slice"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools]
packages = ["core", "gateway", "gateway.connectors", "gateway.demo", "spike"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
