[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sans-schema"
version = "0.2.0"
description = "Semantic Query Gateway — first gateway slice"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psycopg[binary]>=3.1",
    "slowapi>=0.1.9",
    "limits>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools]
# The shipped distribution is core/ + gateway/ (what the container runs). spike/
# is an eval-only harness — not packaged, but importable in dev because tests/ is
# a package, so the repo root lands on sys.path during test runs.
packages = ["core", "gateway", "gateway.connectors", "gateway.demo"]

[tool.setuptools.package-data]
"gateway.demo" = ["*.json", "*.sql"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
